--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Ram & Antara getting hitched">
+    <meta property="og:title" content="Rashmita & Binod getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -336,10 +336,10 @@
 
 <section id="video-bg" class="hidden-sm hidden-xs">
     <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://youtu.be/9giqL1H6yRs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+         data-property="{videoURL:'https://youtu.be/IMsQK_2aQSs',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:56, stopAt:105, opacity:1}">
     </div>
     <div id="video-content">
-        <h5>Kolkata</h5>
+        <h5>Rourkela</h5>
         <p>City of joy</p>
     </div>
 </section>
